# LinuxDev2021

./: README.md
02_TerminalProject/: README.MD  Show.c
03_Multifile/: Makefile  README.MD
03_TerminalProject/: Makefile
04_Text/: README.MD  file.txt  randomize.sh
05_Debugging/: Makefile  README.MD  gdb_res_1_standart.txt  gdb_res_2_standart.txt  gdb_scenario_1.txt  gdb_scenario_2.txt  range.c
06_TracingFencing/: Makefile  PROTECT.c  README.MD  move.c  tests.sh  text.txt
07_Environmental/: Makefile.am  README.md  configure.ac  rhasher.c  tests.sh
08_Regexps/: Makefile.am  README.MD  configure.ac  esub.c  tests.sh
09_Testing/: README.MD  configure.ac
09_Testing/src/: Makefile.am  buf.h
09_Testing/tests/: Makefile.am
10_I18n/: Makefile.am  README.MD  ru.po  simple_guesser.c
11_Documenting/: Doxyfile.in  Makefile.am  README.md  configure.ac  roman_table.h  ru.po  simple_guesser.c  simple_guesser.pot
12_PatchInstall/: Makefile.am  README.md  configure.ac  ru.po  simple_guesser.c
TracingFencing/: PROTECTED.c  move.c
